--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,22 @@
 <resources>
     <string name="app_name">Love</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="title_activity_sign_up_or_login">SignUpOrLoginActivity</string>
+    <string name="action_settings">Настройки</string>
+    <string name="title_activity_login">Вход в приложение</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="prompt_username">Никнейм</string>
+    <string name="prompt_password">Пароль</string>
+    <string name="prompt_password_again">Повторите пароль</string>
 
-    <string name="prompt_username">Username</string>
-    <string name="prompt_password">Password</string>
-    <string name="prompt_password_again">Password Again</string>
+    <string name="signup">Регистрация</string>
+    <string name="loginVK">Вход через ВК</string>
 
-    <string name="signup">Sign up</string>
-
-    <string name="error_intro">"Please "</string>
-    <string name="error_blank_username">enter a username</string>
-    <string name="error_blank_password">enter a password</string>
-    <string name="error_mismatched_passwords">enter the same password twice</string>
-    <string name="error_join">", and "</string>
+    <string name="error_intro">"Пожалуйста "</string>
+    <string name="error_blank_username">введите никнейм</string>
+    <string name="error_blank_password">введите пароль</string>
+    <string name="error_mismatched_passwords">введите выбранный пароль дважды</string>
+    <string name="error_join">", и "</string>
     <string name="error_end">.</string>
-    <string name="progress_signup">Signing you up&#8230;</string>
-    <string name="progress_login">Logging you in&#8230;</string>
-    <string name="login">Log in</string>
+    <string name="progress_signup">Выполняется регистрация &#8230;</string>
+    <string name="progress_login">Выполняется вход &#8230;</string>
+    <string name="login">Вход</string>
 </resources>
