--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Love</string>
+    <string name="app_name">Love.ykt</string>
     <string name="action_settings">Настройки</string>
-    <string name="title_activity_login">Вход в приложение</string>
 
     <string name="prompt_username">Адрес почты</string>
     <string name="prompt_password">Пароль</string>
