--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="title_activity_filter">Фильтр</string>
 
+    <string name="filter_search">Поиск</string>
+
 </resources>
