create seek bar
- add seek bar with 2 thums

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
 
     <string name="filter_search">Поиск</string>
 
+    <string name="demo_min_label">Min</string>
+    <string name="demo_max_label">Max</string>
+
 </resources>
